fix: fix unselected tab visibility

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 /* Custom Tailwind classes */
 @layer components {
 	.tab {
-		@apply transition flex text-center items-center flex-1 max-w-md px-2 py-1 overflow-hidden text-sm text-indigo-600 rounded-lg cursor-pointer whitespace-nowrap;
+		@apply transition flex text-center items-center flex-1 max-w-md px-2 py-1 overflow-hidden text-sm text-indigo-600 rounded-lg cursor-pointer whitespace-nowrap text-white;
 	}
 	.active-tab {
 		@apply dark:text-white bg-indigo-100 dark:bg-indigo-700;
